@@ -67,9 +67,6 @@ void NativeResolverImpl::__import_packages_to_reinstall()
 		// this also involves creating new entry in __initial_packages
 		auto& targetVersion = __initial_packages[*packageNameIt].version;
 		targetVersion = nullptr; // removed by default
-
-		// = this package was not installed by resolver
-		__manually_modified_package_names.insert(*packageNameIt);
 	}
 }
 
@@ -123,7 +120,6 @@ void NativeResolverImpl::installVersion(const BinaryVersion* version)
 	}
 
 	initialPackageEntry.sticked = true;
-	__manually_modified_package_names.insert(packageName);
 }
 
 void NativeResolverImpl::satisfyRelationExpression(const RelationExpression& relationExpression)
@@ -154,7 +150,6 @@ void NativeResolverImpl::removePackage(const string& packageName)
 	initialPackageEntry.sticked = true;
 	initialPackageEntry.modified = true;
 	initialPackageEntry.version = nullptr;
-	__manually_modified_package_names.insert(packageName);
 
 	if (__config->getBool("debug::resolver"))
 	{
@@ -232,6 +227,22 @@ SolutionContainer::iterator __full_chooser(SolutionContainer& solutions)
 	return __fair_chooser(solutions);
 }
 
+bool NativeResolverImpl::__compute_target_auto_status(const string& packageName) const
+{
+	auto overrideIt = __auto_status_overrides.find(packageName);
+	if (overrideIt != __auto_status_overrides.end())
+	{
+		return overrideIt->second;
+	}
+
+	if (__old_packages.count(packageName))
+	{
+		return __cache->isAutomaticallyInstalled(packageName);
+	}
+
+	return !__initial_packages.count(packageName);
+}
+
 AutoRemovalPossibility::Allow NativeResolverImpl::__is_candidate_for_auto_removal(const dg::Element* elementPtr)
 {
 	typedef AutoRemovalPossibility::Allow Allow;
@@ -253,12 +264,16 @@ AutoRemovalPossibility::Allow NativeResolverImpl::__is_candidate_for_auto_remova
 	{
 		return Allow::No;
 	}
-	if (__manually_modified_package_names.count(packageName))
-	{
-		return Allow::No;
+	{ // checking was the package initially requested
+		auto initialPackageIt = __initial_packages.find(packageName);
+		if (initialPackageIt != __initial_packages.end() && initialPackageIt->second.sticked)
+		{
+			return Allow::No;
+		}
 	}
 
-	return __auto_removal_possibility.isAllowed(*__cache, version, __old_packages.count(packageName));
+	return __auto_removal_possibility.isAllowed(version, __old_packages.count(packageName),
+			__compute_target_auto_status(packageName));
 }
 
 bool NativeResolverImpl::__clean_automatically_installed(Solution& solution)
@@ -754,7 +769,7 @@ Resolver::UserAnswer::Type NativeResolverImpl::__propose_solution(
 					}
 				}
 			}
-			suggestedPackage.manuallySelected = __manually_modified_package_names.count(packageName);
+			suggestedPackage.automaticallyInstalledFlag = __compute_target_auto_status(packageName);
 		}
 		else
 		{
